[project]
name = "test"
version = "0.1.0"
description = "This is a testing file"
authors = [
    {name = "Eddie",email = "eddiemeira@gmail.com"}
]
package.mode = false
requires-python = ">=3.11, <3.14"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "kivymd (>=1.2.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "matplotlab (>=0.1.14,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"